--- a/package.json
+++ b/package.json
@@ -29,18 +29,19 @@
     "@radix-ui/react-toast": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
+    "nodemailer": "^6.9.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.16.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "express": "^4.18.2",
-    "nodemailer": "^6.9.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20.17.10",
@@ -48,12 +49,12 @@
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^8.2.2",
     "eslint": "^8.57.1",
     "eslint-config-react-app": "^7.0.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "terser": "^5.39.0",
-    "vite": "^4.4.5",
-    "concurrently": "^8.2.2"
+    "vite": "^4.4.5"
   }
 }
